Fix project description text wrapping and update hero image

--- a/css/styles-new.css
+++ b/css/styles-new.css
@@ -512,7 +512,7 @@ body {
   width: 100%;
   padding: 140px 0 80px;
   box-sizing: border-box;
-  background-image: url('../img/Drive2EarnHero.png');
+  background-image: url('../img/Drive2EarnHero.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -802,7 +802,7 @@ section {
   border: 1px solid #e2e8f0;
   width: 100%;
   position: relative;
-  min-height: 280px;
+  min-height: 350px;
 }
 
 .project-card:hover {
@@ -874,12 +874,12 @@ section {
   padding: 0 1rem;
   margin: 0.25rem 0 0.75rem;
   line-height: 1.5;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  height: 4em;
+  overflow: visible;
+  text-overflow: clip;
+  height: auto;
+  max-height: none;
+  white-space: normal;
+  margin-bottom: 90px; /* Space for details and button */
 }
 
 .project-details {
@@ -887,12 +887,12 @@ section {
   border-top: 1px solid #e2e8f0;
   background-color: #f8f9fa;
   margin-top: auto;
-  bottom: 56px;
+  position: absolute;
+  bottom: 51px; /* Height of button */
   left: 0;
   right: 0;
   width: 100%;
   box-sizing: border-box;
-  position: absolute;
 }
 
 .detail-item {
@@ -930,8 +930,7 @@ section {
   bottom: 0;
   left: 0;
   right: 0;
-  margin: 0;
-  height: 56px;
+  height: 51px;
   line-height: 1.5;
   box-sizing: border-box;
 }
@@ -1377,7 +1376,7 @@ header {
   background: linear-gradient(135deg, var(--gradient-start), var(--gradient-end));
   position: relative;
   overflow: hidden;
-  background-image: url('../img/Drive2EarnHero.png');
+  background-image: url('../img/Drive2EarnHero.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -1643,7 +1642,7 @@ header {
   width: 100%;
   padding: 140px 0 80px;
   box-sizing: border-box;
-  background-image: url('../img/Drive2EarnHero.png');
+  background-image: url('../img/Drive2EarnHero.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -1666,7 +1665,7 @@ header {
   
   .hero-banner {
     padding: 100px 0 50px;
-    background-image: url('../img/Drive2EarnHero.png');
+    background-image: url('../img/Drive2EarnHero.jpg');
     background-position: center;
     background-size: cover;
   }
@@ -1677,19 +1676,26 @@ header {
   
   /* Fix project card layout on mobile */
   .project-card {
-    min-height: 320px;
+    min-height: 350px;
     margin-bottom: 15px;
   }
   
   .project-details {
     position: absolute;
-    bottom: 56px;
+    bottom: 51px;
   }
   
   .view-project-btn {
     position: absolute;
     bottom: 0;
-    height: 56px;
+  }
+  
+  .project-description {
+    height: auto;
+    max-height: none;
+    -webkit-line-clamp: unset;
+    -webkit-box-orient: vertical;
+    overflow: visible;
   }
 }
 
